--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html{
   scroll-behavior: smooth;
 }
 
+
 .loading{
   position: fixed;
   width: 100%;
@@ -13,6 +14,7 @@ html{
   font-size: 5em;
   z-index: 10000;
   animation: fade-in 4s;
+  text-shadow: 2px 2px rgba(0, 140, 255, 0.575);
 }
 
 .loading.display-none{
@@ -71,6 +73,7 @@ header .logo
   cursor: pointer;
   font-family: 'Montserrat Subrayada', sans-serif;
   font-size: 30px;
+  text-shadow: 2px 2px rgba(0, 140, 255, 0.575);
 }
 
 .toggle
@@ -151,6 +154,7 @@ video{
   color: #fff;
   line-height: 1em;
   text-transform: uppercase;
+  text-shadow: 2px 2px rgba(0, 140, 255, 0.575);
 }
 
 .text h3
@@ -160,6 +164,7 @@ video{
   color: #fff;
   line-height: 1em;
   text-transform: uppercase;
+  text-shadow: 2px 2px rgba(0, 140, 255, 0.575);
 }
 
 .text p
@@ -168,6 +173,7 @@ video{
   color: #fff;
   font-weight: 400;
   max-width: 760px;
+  text-shadow: 2px 2px rgba(0, 140, 255, 0.575);
 }
 
 .text a
@@ -183,6 +189,7 @@ video{
   color: #111;
   letter-spacing: 2px;
   transition: 0.2s;
+  text-shadow: 2px 2px rgba(0, 140, 255, 0.575);
 }
 
 .text a:hover
@@ -250,6 +257,7 @@ video{
   font-weight: 600;
   padding-top: 10px;
   border: solid black 1px;
+  text-shadow: 2px 2px rgba(0, 140, 255, 0.575);
 }
 
 
@@ -280,12 +288,14 @@ video{
 .box h2{
   font-size: 40px;
   font-weight: 600;
+  text-shadow: 2px 2px black;
 }
 
 .box p{
   font-size: 20px;
   width: 70%;
   margin: auto;
+  text-shadow: 2px 2px black;
 }
 
 .box:hover{
@@ -293,8 +303,8 @@ video{
 }
 
 .box img{
-  height: 140px;
-  width: 140px;
+  height: 200px;
+  width: 200px;
 }
 
 .photo1{
@@ -317,6 +327,7 @@ video{
   display: flex;
   background-color: black;
   color: white;
+  text-shadow: 2px 2px rgba(0, 140, 255, 0.575);
 }
 
 .photo{
@@ -366,6 +377,7 @@ video{
   font-size: 50px;
   color: white;
   background-color: black;
+  text-shadow: 2px 2px rgba(0, 140, 255, 0.575);
 }
 
 footer{
@@ -381,6 +393,7 @@ footer{
 footer p{
   width: 33.333%;
   text-align: center;
+  text-shadow: 2px 2px black;
 
 }
 @media (max-width: 1600px){
@@ -505,5 +518,10 @@ footer p{
 
   .text h3{
   font-size: 20px;
+}
+
+.box img{
+  height: 140px;
+  width: 140px;
 }
 }
