--- a/style.css
+++ b/style.css
@@ -240,6 +240,7 @@ video{
   font-size: 24px;
   font-weight: 500;
   color: white;
+  text-shadow: 2px 2px rgba(0, 140, 255, 0.575);
 }
 
 .menu ul li a:hover
@@ -396,7 +397,7 @@ footer p{
   text-shadow: 2px 2px black;
 
 }
-@media (max-width: 1600px){
+@media (max-width: 1400px){
   .me{
     flex-direction: column;
   }
