feat: Add loading overlay component; implement form validation logic and enhance navbar scrolling behavior

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -107,7 +107,7 @@ html {
   position: relative;
 }
 
-.scetion-transition-5 {
+.section-transition-5 {
   background: linear-gradient(#000000, #030c18);
 }
 
